tic-tac-toe-web/k8s/tic-tac-toe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tic-tac-toe-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tic-tac-toe
  template:
    metadata:
      labels:
        app: tic-tac-toe
    spec:
      containers:
      - name: tic-tac-toe
        image: sah1/lightweight-ai-tic-tac-toe
        ports:
        - containerPort: 80
