tic-tac-toe-web/k8s/tic-tac-toe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tic-tac-toe-service
spec:
  selector:
    app: tic-tac-toe
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
